Fix mdl two scrollbars

--- a/wp-content/themes/alicelf-material/style-parts/_defaults.scss
+++ b/wp-content/themes/alicelf-material/style-parts/_defaults.scss
@@ -1,5 +1,10 @@
-body {
-	//overflow-y : hidden;
+.mdl-layout__container {
+	height : auto;
+	top : 0;
+}
+
+#am-appwrap {
+	position : relative;
 }
 
 .AMscope {
